--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axois": "^0.0.1-security",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.16.4",
     "lucide-react": "^0.456.0",
     "next": "^15.0.3",
     "react": "^18.0.0",
