--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.456.0",
+    "mssql": "^11.0.1",
     "next": "^15.0.3",
+    "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "react": "^18.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.4",
