--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.456.0",
     "mssql": "^11.0.1",
-    "next": "^15.0.3",
+    "next": "14.2.5",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
-    "react": "^18.0.0",
+    "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
